# axon

./: .gitignore  CMakeLists.txt  Dockerfile.mingw  README.md  build_packages.sh  create_windows_package.sh  encrypted.txt  filea.txt  install.sh  main.c  test_text_files.py  text.txt
axon_test/: test_100.0MB.encrypted.txt
include/common/: config.h  failures.h  optimization.h  transformation_config.h
include/crypto/: chunked_file.h  confusion.h  decryptor.h  diffusion.h  diffusion_simd.h  encryptor.h  key_expansion.h  password.h  password_simd.h  simd_compat.h
include/utils/: config.h  conversion.h  failures.h  fileio.h  memory.h  password.h
lib/crypto/: confusion.c  decryptor.c  diffusion.c  diffusion_simd.c  encryptor.c  key_expansion.c  optimization.c  password.c  password_simd.c  simd_compat.c
lib/utils/: conversion.c  fileio.c  memory.c  password.c
packaging/: build_deb.sh
packaging/debian/DEBIAN/: control
packaging/debian/usr/share/man/man1/: axon.1
packaging/macos/: axon.rb
packaging/windows/: axon.nsi
src/: main.c
